# CppCheckActions

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: build-and-test-action.yml
sources/: Add.cpp  Add.h  CMakeLists.txt
tests/: AddTest.cpp  CMakeLists.txt
